gcp-exercise/wdpress/pod-configmap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-world
spec:
  containers:
    - image: asia.gcr.io/wdpress-173204/wdpress/hello-world
      imagePullPolicy: Always
      name: hello-world
